--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "hwi/oauth-bundle": "^1.2",
         "jeroennoten/laravel-adminlte": "^3.5",
+        "kylekatarnls/laravel-carbon-2": "^1.0.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
@@ -22,8 +23,7 @@
         "nesbot/carbon": "^2.42",
         "php-http/guzzle6-adapter": "^2.0",
         "php-http/httplug-bundle": "^1.19",
-        "kylekatarnls/laravel-carbon-2": "^1.0.0"
-
+        "symfony/finder": "^5.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
